<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DaftarActivity">

    <EditText
        android:id="@+id/reg_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="247dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nama"
        android:inputType="text" />

    <EditText
        android:id="@+id/reg_notelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nomor_telpon"
        android:inputType="number|phone" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="DAFTAR"
        android:background="@drawable/btn_rounded_daftar"/>

</LinearLayout>